--- a/birthday-main.html
+++ b/birthday-main.html
@@ -256,6 +256,35 @@
     </style>
 </head>
 <body>
+    <!-- Add audio element and hidden play button -->
+    <audio id="bg-music" loop>
+        <source src="./music.mp3" type="audio/mpeg">
+    </audio>
+
+    <button id="playMusicBtn" style="position:fixed;top:20px;right:20px;z-index:1000;padding:10px 20px;border-radius:50px;background:rgba(255,255,255,0.2);border:2px solid rgba(255,255,255,0.4);color:white;cursor:pointer;backdrop-filter:blur(5px);font-family:'Poppins',sans-serif;display:none;">
+        Play Music 🎶
+    </button>
+
+    <script>
+        // Try to play music when page loads or on first interaction
+        function tryPlayMusic() {
+            const audio = document.getElementById('bg-music');
+            audio.play().catch(err => console.log("Waiting for user interaction"));
+        }
+
+        // Play music on any user interaction
+        document.addEventListener('click', function initAudio() {
+            tryPlayMusic();
+            document.removeEventListener('click', initAudio);
+        }, { once: true });
+
+        // Also try on page load
+        window.addEventListener('load', tryPlayMusic);
+
+        // Add music play to celebrate button
+        document.getElementById("celebrateBtn").addEventListener("click", tryPlayMusic);
+    </script>
+
     <div class="background"></div>
     <canvas id="starCanvas"></canvas>
     <canvas id="petalsCanvas"></canvas>
@@ -929,7 +958,7 @@
                     });
                 });
             }, 3000);
-        });
+            }, 3000);
+        });t>
     </script>
-</body>
-</html>
+</body></html>
